# emice

./: .gitignore  AGENTS.md  Cargo.toml  DEBUG.md  QUICKSTART.md  README-DEV.md  README.md  index.html  main.js  package-lock.json  package.json  start-dev-server.sh  styles.css  vite.config.js
.github/workflows/: windows-release.yml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
